--- a/m/ma/man/manycontacts.com.html
+++ b/m/ma/man/manycontacts.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the manycontacts.com privacy policy that was archived on 2016-08-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160816203945id_/https%3A//www.manycontacts.com/en/page/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the manycontacts.com privacy policy that was archived on 2019-04-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190419074601id_/https%3A//www.manycontacts.com/en/page/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xml:lang="en" lang="en"><head>
         <title>Privacy Policy Page |</title>
@@ -9,13 +9,13 @@
         <meta http-equiv="Content-Language" content="en">
         <!-- LINKS -->
         <link href="https://fonts.googleapis.com/css?family=Bad+Script|Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700" rel="stylesheet" type="text/css">
-        <link href="//d1cjvozex12ffa.cloudfront.net/assets/css/manycontacts.css?version=1.6.131" rel="stylesheet" type="text/css">
-        <link href="//d1cjvozex12ffa.cloudfront.net/assets/home/font-awesome-4.6.3/css/font-awesome.min.css?version=1.6.131" rel="stylesheet" type="text/css">
+        <link href="//d1cjvozex12ffa.cloudfront.net/assets/css/manycontacts.css?version=1.6.166" rel="stylesheet" type="text/css">
+        <link href="//d1cjvozex12ffa.cloudfront.net/assets/home/font-awesome-4.6.3/css/font-awesome.min.css?version=1.6.166" rel="stylesheet" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--[if IE 7]>
-            <link href="//d1cjvozex12ffa.cloudfront.net/assets/css/font-awesome-ie7.min.css?version=1.6.131" rel="stylesheet" type="text/css" />
+            <link href="//d1cjvozex12ffa.cloudfront.net/assets/css/font-awesome-ie7.min.css?version=1.6.166" rel="stylesheet" type="text/css" />
         <![endif]-->
-        <link rel="shortcut icon" type="image/x-icon" href="//d1cjvozex12ffa.cloudfront.net/assets/img/favicon.ico?version=1.6.131">
+        <link rel="shortcut icon" type="image/x-icon" href="//d1cjvozex12ffa.cloudfront.net/assets/img/favicon.ico?version=1.6.166">
     </head>
     <body id="simple-design" class="home static">
         <section id="staticPage" class="top-bar">
@@ -26,26 +26,25 @@
 <!-- start -->
         <section id="about">
 <h1 style="padding-top:20px" id="manycontacts"><a href="https://www.manycontacts.com"><span class="logo">ManyContacts</span></a></h1>
-<h2>ManyContacts Privacy Policy</h2>
+<h2></h2>
 <ul class="decimal">
- <li><strong>Some Definitions</strong><br>The terms “we,” “us,” and “Company” refer to ManyContacts. We are in the business of providing an online platform that our customers may use to
-  create and deploy “ManyContacts Bar” embeddable JavaScript code snippets (which, when created using the “Services,” as defined below, are referred to as “ManyContacts Bars”). The term “ManyContacts
-  Bar” refers either to the business or the online platform as the context requires. The term “Services” refers to the services offered by ManyContacts. The term “Member” refers to an individual or
+ <li><strong>Some Definitions</strong><br>The terms “we,” “us,” and “Company” refer to us. We are in the business of providing an online software (which, when created using the “Services,” as defined below, are referred to as “ManyContacts Bars”). The term “ManyContacts
+  Bar” refers either to the business or the online platform as the context requires. The term “Services” refers to the services offered by us. The term “Member” refers to an individual or
   entity who or which is registered with us to use the Services. The term “you” refers to any Member (or other party whose contact information has been provided to us over the internet) who is reading
-  this Privacy Policy, or on behalf of whom this policy is being read. The term “Website” refers to the website with the URL <a href="https://www.manycontacts.com" title="ManyContacts">https://www.manycontacts.com</a>.
+  this Privacy Policy, or on behalf of whom this policy is being read. The term “Website” refers to our website.
   The term “Personal Information” means information about an individual who is a Member and includes any “Supplemental Personal Information,” as defined in II.D., that we obtain.</li>
  <li><strong>Categories of Information We Collect</strong><br>
   <ul>
-   <li>Information You Provide to Us: When you register to use ManyContacts Widgets on a free or other basis, communicate with customer service, or send us an email, you provide us with
+   <li>Information You Provide to Us: When you register, communicate with customer service, or send us an email, you provide us with
     information that we collect. Such information may include your IP address, name, physical address, email address, phone number, cell phone number, credit card information, and other information
     such as gender, occupation and other demographic information. By providing us with this information, you consent to your information being collected, used, disclosed and stored by us in accordance
     with this Privacy Policy.</li>
-   <li>Other Information We Receive and Store: When you register to use ManyContacts Widgets, we store “cookies,” which are strings of code, on your computer. We also use electronic images known
-    as Web beacons. With those cookies, we are aware of and collect information concerning when you visit our Website, when you use ManyContacts Widgets, your browser type and version, your operating
-    system and platform and other similar information. With Web beacons, we can determine when you view a ManyContacts Widgets or click on a link in a ManyContacts Widgets, and collect other data. You
+   <li>Other Information We Receive and Store: When you register to use the servcie, we store “cookies,” which are strings of code, on your computer. We also use electronic images known
+    as Web beacons. With those cookies, we are aware of and collect information concerning when you visit our Website, when you use the service, your browser type and version, your operating
+    system and platform and other similar information. With Web beacons, we can determine when you view a the service or click on a link in a the service, and collect other data. You
     may turn off all cookies that have been placed on your computer by following the instructions on your browser on how to block cookies that have been placed on your computer. However, if you block
     our cookies it will be more difficult, and maybe impossible, to use the Services.</li>
-   <li>Tracking Our Emails to Our Customers: When we send emails to our own registered ManyContacts Widgets customers, we’ll sometimes track who opened the emails and who went so far as to click
+   <li>Tracking Our Emails to Our Customers: When we send emails to our own registered customers, we’ll sometimes track who opened the emails and who went so far as to click
     on any of the hyperlinks. We do this to measure the performance of our Email Campaigns, and to improve our offerings to specific customer segments.</li>
    <li>Information From Other Sources: We may obtain additional information about you by using your email address, or other information, to directly, or through one or more services, search over
     the internet, or elsewhere. We thereby obtain information that appears to be related to such email address or other information, such as a name, age and participation in social media websites,
@@ -68,7 +67,7 @@
    <li>To provide information received hereunder to representatives and advisors such as attorneys and accountants to help us comply with legal and other requirements.</li>
    <li>To prosecute and defend a court, arbitration or similar proceeding.</li>
    <li>To support and improve the Services we offer including adding features and providing benchmarking and other comparison information regarding, for example, the relative success of a
-    Members’ ManyContacts Widgets compared to other ManyContacts Widgets by companies in the same or different industries. Benchmarking and similar information is derived from aggregating and
+    Members’ account compared to other accounts by companies in the same or different industries. Benchmarking and similar information is derived from aggregating and
     analyzing data.</li>
    <li>To communicate with you concerning your account for an informational, as opposed to promotional, purpose.</li>
    <li>To transfer your information in the event of the sale of substantially all of the assets of our business to a third-party or in the event of a merger, consolidation or acquisition.
@@ -78,11 +77,11 @@
   </li>
  <li><strong>Safeguarding Your Information</strong><br> To protect your information, our credit card processing vendor uses the latest 128-bit Secure Socket Layer (SSL) technology for secure
   transactions. In addition, our vendor is certified as compliant with card association security initiatives, such as the Visa Cardholder Information Security and Compliance (CISP), MasterCard® (SDP),
-  and Discovery Information Security and Compliance (DISC). ManyContacts Widgets accounts require a username and password to log in. When you’re finished using ManyContacts Widgets, please click the
+  and Discovery Information Security and Compliance (DISC). Accounts require a username and password to log in. When you’re finished using ManyContacts Widgets, please click the
   “log out” link in the top right corner of your screen, to prevent someone from using your computer to access your account. You must keep your username and password secure and not disclose it to a
   third party.Due to the sensitive nature of your account information, we do not re-send forgotten passwords. Users must follow online instructions to reset their passwords if they forget them.Account
   passwords are encrypted. We cannot see your passwords. We can only reset them.</li>
- <li><strong>Notice of Breach of Security</strong><br> Nobody is safe from hackers these days. ManyContacts Widgets will notify you, as soon as possible, if a breach in security results in
+ <li><strong>Notice of Breach of Security</strong><br> Nobody is safe from hackers these days. We will notify you, as soon as possible, if a breach in security results in
   an unauthorized intrusion into our system which materially affects you and will subsequently report the corrective action taken in response to the intrusion.</li>
  <li><strong>Notification of Changes</strong><br> Any changes to this Privacy Policy will be posted to this Website and emailed to the last email address you have given to us, and will
   become effective as of the later of the date we post on the Website or, send the email. You may object to any changes within 20 days after they are posted on our Website or delivered to you, in
@@ -93,10 +92,10 @@
  <li><strong>Accuracy of Data and Rights</strong><br> We do our best to keep your data accurate and up-to-date to the extent that you provide us with the information we require to do that.
   If your data changes (including, but not limited to, a change in your email address) then you are responsible for notifying us of those changes so that we can keep your records up-to-date.We retain
   the data about you only so long as reasonably required to meet the purposes for which we have the right to use the information. In this regard, we keep some data, relating to when and where
-  ManyContacts Widgets were deployed, how many times a ManyContacts Widgets was viewed and clicked.We will give you access to any of your Personal Information that we hold about you within 30 days of
+  we deployed, how many times a it was viewed and clicked.We will give you access to any of your Personal Information that we hold about you within 30 days of
   any request you make for such information. We may charge for providing this information to you, as permitted by applicable law.</li>
  <li><strong>Effective Date</strong><br> This Privacy Policy is effective with respect to all data that we have collected, or collect, about and/or from you, both prior to your registration
-  as a Member and/or during the Term, in accordance with the <a href="/page/terms" title="ManyContacts Widgets Terms of Use">Terms of Use</a>.</li>
+  as a Member and/or during the Term, in accordance with the Terms of Use.</li>
  <li><strong>Questions</strong><br> If you have any questions, comments, or concerns or wish to update, delete or change any Personal Information submitted on this Site, or have any
   questions about our Privacy Policy, please notify us through email.
  </li>
@@ -108,7 +107,7 @@
         <section class="getbar" id="getbar" style="padding:15px;">
             <div class="get-bar event--faq-install" style="padding-top: 45px; border-top: 3px solid #DDD">
                 <button class="arrow"><span><i class="fa fa-arrow-right"></i></span>
-                    START</button>
+                    See Plans &amp; Pricing</button>
             </div>
         </section>
     </section>
@@ -120,10 +119,10 @@
                 <footer>
                     <div class="footer-cols">
                         <ul>
-                            <li><a href="http://faq.manycontacts.com" target="_blank">FAQ</a></li>
-                            <li><a href="/en/page/terms">Terms of Use</a></li>
-                            <li><a href="/en/page/privacy">Privacy Policy</a></li>
-                            <li>Copyright ©2016</li>
+                            <li><a href="http://faq.manycontacts.com" target="_blank" tabindex="-1">FAQ</a></li>
+                            <li><a href="/en/page/terms" tabindex="-1">Terms of Use</a></li>
+                            <li><a href="/en/page/privacy" tabindex="-1">Privacy Policy</a></li>
+                            <li>Copyright ©2018</li>
                         </ul>
                     </div>
                     <div style="clear:both;"></div>
@@ -179,7 +178,7 @@
                   </div>
                   <div class="get-bar">
                     <button type="submit" id="get-bar-button" class="arrow .event--signup-button" style="padding:0">
-                      <span class="validate"><i class="fa fa-arrow-right"></i></span> <span class="load hidden"><i class="fa fa-refresh fa fa-spin"></i></span>START
+                      <span class="validate"><i class="fa fa-arrow-right"></i></span> <span class="load hidden"><i class="fa fa-refresh fa fa-spin"></i></span>See Plans &amp; Pricing
                     </button>
                   </div>
                   <div class="error hidden"></div>
@@ -200,7 +199,7 @@
           ga('create', 'UA-40620403-1', 'auto');
           ga('send', 'pageview');
         </script>
-        <script type="text/javascript" src="//d1cjvozex12ffa.cloudfront.net/assets/js/manycontacts-site.min.js?version=1.6.131"></script>
+        <script type="text/javascript" src="//d1cjvozex12ffa.cloudfront.net/assets/js/manycontacts-site.min.js?version=1.6.166"></script>
 
         <script type="text/javascript" charset="utf-8" async="" src="//bars.manycontacts.com/517941a503f5c22f11000000.js"></script>
     
