--- a/s/sl/sli/slides.com.html
+++ b/s/sl/sli/slides.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the slides.com privacy policy that was archived on 2018-09-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180909055256id_/https%3A//slides.com/privacy%3Froot%3Dtrue) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the slides.com privacy policy that was archived on 2019-04-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190420053107id_/https%3A//slides.com/privacy%3Froot%3Dtrue) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="sl-root static privacy " data-account=""><head>
     <meta charset="utf-8">
@@ -17,19 +17,19 @@
     <meta property="og:url" content="https://slides.com/privacy?root=true">
     <meta property="fb:app_id" content="146002942236376">
 
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="msapplication-tap-highlight" content="no">
 
     <link rel="manifest" href="/manifest.json">
 
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,600,700&amp;subset=latin,cyrillic-ext,greek-ext,greek,latin-ext,cyrillic" rel="stylesheet" type="text/css" data-application-font="opensans">
 
-    <link rel="stylesheet" media="all" href="//assets.slid.es/assets/slides/slides-c6589daceaee3233280d83ec6d641c11d6f37071e10f2983d28ba50cbf7c3bc2.css">
-    <link rel="stylesheet" media="all" href="//assets.slid.es/assets/application-c5ae0c4c8c51baf298e50c97d8ee493302cd623f203a379a163ce315e773fc46.css">
+    <link rel="stylesheet" media="all" href="//assets.slid.es/assets/slides/slides-8054627f4e542be00da64cb59ee1f41d3c304ab80797f700cbcff67d954305df.css">
+    <link rel="stylesheet" media="all" href="//assets.slid.es/assets/application-51d8dca89d3df2f9f8c89e23ddf475a509300faf3e3451a8d51fa1ddda30b1ce.css">
     
     <meta name="csrf-param" content="authenticity_token">
-<meta name="csrf-token" content="20zn+gu83NwRidY130zf7BDLp8WfIJ2u0wDNOGrKveaPpmirUld31k8hodvFIKQIhyEd+U2UeEyNTisUYSmMdA==">
+<meta name="csrf-token" content="j5oiB29PKjNjC6HUmGB3WXqjK9LaCTXwFSX9Bp4TtaMEGB/7fVSEkfhItxWltsFn/9zjUt1gzez1KYDYSPkItA==">
     <script type="text/javascript" async="" src="//widget.uservoice.com/f7sH7NavrjjvuGxByaw.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">
   if( !/dnt=1/.test( window.location.search ) ) {
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -300,7 +300,7 @@
     <div class="legal">
       <a href="https://slides.com/terms?root=true">Terms</a>
       • <a href="https://slides.com/privacy?root=true">Privacy</a>
-      • <span class="copyright">© 2018 Slides, Inc.</span>
+      • <span class="copyright">© 2019 Slides, Inc.</span>
     </div>
 </footer>
 
@@ -320,7 +320,7 @@ UserVoice.push(['set', {
 <script>
 	var SLConfig = {};
 </script>
-    <script src="//assets.slid.es/assets/application-7b59f3b7d97b51b751815113fc425a7fea3192a7b5772ee398d7215732b621e6.js" defer="defer"></script>
+    <script src="//assets.slid.es/assets/application-97f046a5f70bd5a2e8a547e813f56b21ec5e28e8dc0c72af153ad612c774c112.js" defer="defer"></script>
     
   
 
