--- a/z/zu/zub/zubrag.com.html
+++ b/z/zu/zub/zubrag.com.html
@@ -1,7 +1,14 @@
-<!--The following is the downloaded HTML source of the zubrag.com privacy policy that was archived on 2018-11-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181111122634id_/http%3A//www.zubrag.com/policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zubrag.com privacy policy that was archived on 2019-04-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190420204933id_/http%3A//www.zubrag.com/policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-2276041433473322",
+          enable_page_level_ads: true
+     });
+</script>
 <title>::   Privacy Policy</title>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 <meta name="description" content="Free PHP scripts, cPanel scripts, online tools, articles and tutorials.">
@@ -78,7 +85,7 @@ click <a href="http://www.google.com/privacy.html" rel="nofollow">here</a>.
     </td>
   </tr>
 </tbody></table>
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
+<script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-485270-1']);
   _gaq.push(['_trackPageview']);
