--- a/m/mu/mus/musiczum.com.html
+++ b/m/mu/mus/musiczum.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the musiczum.com privacy policy that was archived on 2018-11-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181130212348id_/https%3A//musiczum.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the musiczum.com privacy policy that was archived on 2019-04-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190420233650id_/https%3A//musiczum.com/privacy-policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html class="no-js lightbrown musiczum music"><!--<![endif]--><head>
+<!DOCTYPE html><html class="webkit chrome chrome69 linux js lightbrown musiczum music desktop landscape"><!--<![endif]--><head>
         <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="robots" content="NOINDEX, NOFOLLOW">
@@ -12,18 +12,18 @@
 <title>musiczum.com - Privacy Policy</title>
 
 <!--BootstrapStyle-->
-<link rel="shortcut icon" href="https://cdn.123shapeme.com/img/assets/favicon.ico"><link rel="stylesheet" type="text/css" href="https://cdn.123shapeme.com/theme/Entertainment/Stacked/css/frontend/theme-rev/lightbrown.167a81ac.css">
+<link rel="shortcut icon" href="/img/assets/favicon.ico"><link rel="stylesheet" type="text/css" href="/theme/Entertainment/Stacked/css/frontend/theme-rev/lightbrown.167a81ac.css">
 <!--[if lt IE 8]>
-    <link rel="stylesheet" type="text/css" href="https://cdn.123shapeme.com/components/Bootstrap-IE7Fix/css/bootstrap-ie7fix.min.css"/><![endif]-->
+    <link rel="stylesheet" type="text/css" href="/components/Bootstrap-IE7Fix/css/bootstrap-ie7fix.min.css"/><![endif]-->
 
 <!--[if lt IE 9]>
-    <script type="text/javascript" src="https://cdn.123shapeme.com/components/html5shiv/dist/html5shiv.js"></script>    <script type="text/javascript" src="https://cdn.123shapeme.com/components/respond/src/respond.js"></script><![endif]-->        <!-- Google Tag Manager -->
+    <script type="text/javascript" src="/components/html5shiv/dist/html5shiv.js"></script>    <script type="text/javascript" src="/components/respond/src/respond.js"></script><![endif]-->        <!-- Google Tag Manager -->
 <script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-MMPL24Z"></script><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
             new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-MMPL24Z');</script>
-<!-- End Google Tag Manager -->    </head>
+<!-- End Google Tag Manager -->    <link rel="stylesheet" type="text/css" href="https://app.five9.com/consoles/SocialWidget/five9-social-widget.css?_=1580454571281" media="all"></head>
     <body>
 
     <!-- Google Tag Manager (noscript) -->
@@ -44,8 +44,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/" class="navbar-brand"><img src="https://cdn.123shapeme.com/img/logos/music/min/musiczum.png" alt="musiczum.com - Privacy Policy" class="img-responsive"></a>            </div>
-            <p class="text-right">Questions? 1-888-906-3585 | <a href="/cdn-cgi/l/email-protection#f0999e969fb09d858399938a859dde939f9d"><span class="__cf_email__" data-cfemail="9ef7f0f8f1def3ebedf7fde4ebf3b0fdf1f3">[email&nbsp;protected]</span></a></p>
+                <a href="/" class="navbar-brand"><img src="/img/logos/music/min/musiczum.png" alt="musiczum.com - Privacy Policy" class="img-responsive"></a>            </div>
+            <p class="text-right">Questions? 1-888-906-3585 | <a href="/cdn-cgi/l/email-protection#244d4a424b644951574d475e51490a474b49"><span class="__cf_email__" data-cfemail="83eaede5ecc3eef6f0eae0f9f6eeade0ecee">[email&nbsp;protected]</span></a></p>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
@@ -90,8 +90,6 @@
 <li><a href="/privacy-policy">Privacy Policy</a></li>
 <li><a href="/refund-policy">Refund Policy</a></li>
 <li><a href="/about-us">About Us</a></li>
-
-
 <li><a href="/support">Contact Us</a></li>
 <li><a href="/support">Support</a></li>
 <li><a href="/affiliates">Affiliates</a></li>                    </ul>
@@ -102,10 +100,10 @@
 
             <div class="row">
                 <div class="col-sm-4">
-                    <a href="/"><img src="https://cdn.123shapeme.com/img/logos/music/min/musiczum.png" class="img-responsive" alt=""></a>                </div>
+                    <a href="/"><img src="/img/logos/music/min/musiczum.png" class="img-responsive" alt=""></a>                </div>
                 <div class="col-sm-4 col-sm-offset-4">
                     <address>
-                        © 2018 musiczum.com. All rights reserved. Blender Bunch LTD - GLADSTONOS &amp; EVANGELISTRIAS, 1, AGATHANGELOU BUSINESS CENTER, 3032, LIMASSOL, CYPRUS
+                        © 2019 musiczum.com. All rights reserved. Blender Bunch LTD - GLADSTONOS &amp; EVANGELISTRIAS, 1, AGATHANGELOU BUSINESS CENTER, 3032, LIMASSOL, CYPRUS
                     </address>
                 </div>
 
@@ -123,7 +121,7 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="https://cdn.123shapeme.com/img/logos/music/min/musiczum_dark.png" alt="musiczum.com - Privacy Policy" class="img-responsive center-block">                    </div>
+                        <img src="/img/logos/music/min/musiczum_dark.png" alt="musiczum.com - Privacy Policy" class="img-responsive center-block">                    </div>
                 </div>
                 <div class="row">
 
@@ -170,7 +168,7 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="https://cdn.123shapeme.com/img/logos/music/min/musiczum_dark.png" alt="musiczum.com - Privacy Policy" class="img-responsive center-block">                        </div>
+                            <img src="/img/logos/music/min/musiczum_dark.png" alt="musiczum.com - Privacy Policy" class="img-responsive center-block">                        </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
@@ -198,7 +196,7 @@
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div>
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript" src="https://cdn.123shapeme.com/theme/Entertainment/Stacked/js/frontend/min-rev/scripts.min.da214dc5.js"></script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript" src="/theme/Entertainment/Stacked/js/frontend/min-rev/scripts.min.da214dc5.js"></script>
 <!--  Start Five 9 code  -->
                         <style>
                 .five9-frame-full {
@@ -354,7 +352,7 @@
                 var profiles = 'Live Chat';
                 var webname = 'musiczum.com';
 
-                                var cdnUrl = 'https://cdn.123shapeme.com/';
+                                var cdnUrl = 'http://musiczum.com/';
                 var logoChat = 'img/logos/music/min/musiczum_chat.png';
 
                 Five9SocialWidget.addWidget({
@@ -366,7 +364,7 @@
                     logo : cdnUrl + logoChat,
                     showProfiles: false
                 });
-            </script>
+            </script><div class="five9-frame" style="width: 320px;display:none;"><div class="five9-frame-minimized"><div class="five9-header" style="display: none;"><div id="five9-maximize-button" class="five9-chat-button"><span class="five9-icon"></span><span class="five9-text">Chat</span></div></div></div><div class="five9-frame-full" style="height:590px;"><div class="five9-header close-header" id="five9-header"><div id="five9-minimize-button" class="five9-chat-button"><div class="five9-icon"></div><div class="five9-text">Chat</div><div id="five9-popout-button"></div></div></div></div></div>
             <!-- END five9 code -->
 
     
