--- a/m/mi/mik/mikeholt.com.html
+++ b/m/mi/mik/mikeholt.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the mikeholt.com privacy policy that was archived on 2018-03-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180322003806id_/http%3A//www.mikeholt.com/about-privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mikeholt.com privacy policy that was archived on 2019-04-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190421003629id_/https%3A//mikeholt.com/about-privacy.php) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "https://www.w3.org/TR/html4/loose.dtd"><html><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>
 Mike Holt Privacy Policy</title>
 <!-- need to break these out and analyze how to use them in the new site -->
@@ -10,8 +10,8 @@ Mike Holt Privacy Policy</title>
 <meta property="fb:admins" content="RhythmClub">
 <meta property="og:title" content="Mike Holt Enterprises - the leader in electrical training. ">
 <meta property="og:type" content="article">
-<meta property="og:url" content="http://www.mikeholt.com">
-<meta property="og:image" content="http://www.mikeholt.com/fb/og/landing.jpg">
+<meta property="og:url" content="https://www.mikeholt.com">
+<meta property="og:image" content="https://www.mikeholt.com/fb/og/landing.jpg">
 <meta property="og:description" content="Mike Holt worked his way up through the electrical trade from apprentice electrician through electrical contractor, to become one of the most recognized experts in the world as it relates to electrical power installations. He was a Journeyman Electrician, Master Electrician, and Electrical Contractor. In 1974, Mike realized there was a need for quality electrical training and opened Mike Holt Enterprises.">
 
 <link href="https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic,900,900italic" rel="stylesheet" type="text/css">
@@ -483,7 +483,7 @@ END OPTIONAL SUB MENU BUTTON(S) -->
                 At any time, you can view and/or update your MikeHolt.com newsletter subscriptions or
                 your Code Forum profile as follows:</p>
             <ul>
-                <li>To edit your code forum profile: <a href="http://forums.mikeholt.com/usercp.php" target="_self">click
+                <li>To edit your code forum profile: <a href="https://forums.mikeholt.com/usercp.php" target="_self">click
                     here</a>.</li>
                 <li>To edit your newsletter subscription options, <a href="newslettersRegister.php?action=modify">click
                     here</a> and follow the instructions displayed</li>
